// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snackbar > snapshot: custom test id 1`] = `
<output
  class="ucl-uikit-snackbar css-1rhqqf3"
  data-testid="custom-test-id"
>
  <svg
    class="ucl-icon css-1uzxprk"
    data-testid="ucl-icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 11.08V12a10 10 0 1 1-5.93-9.14"
    />
    <polyline
      points="22 4 12 14.01 9 11.01"
    />
  </svg>
  <span>
    Test snackbar
  </span>
  <span
    class="css-1l2xg72"
  >
    <button
      class="css-1nj6pk0"
      data-testid="custom-test-id-undo-button"
    >
      UNDO
    </button>
  </span>
</output>
`;

exports[`Snackbar > snapshot: minimal props 1`] = `
<output
  class="ucl-uikit-snackbar css-1rhqqf3"
  data-testid="ucl-uikit-snackbar"
>
  <svg
    class="ucl-icon css-1uzxprk"
    data-testid="ucl-icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 11.08V12a10 10 0 1 1-5.93-9.14"
    />
    <polyline
      points="22 4 12 14.01 9 11.01"
    />
  </svg>
  <span>
    Test snackbar
  </span>
  <span
    class="css-1l2xg72"
  >
    <button
      class="ucl-icon-button css-j76afn"
      data-testid="ucl-uikit-snackbar-close-button"
    >
      <svg
        class="ucl-icon css-148hpxb"
        data-testid="ucl-icon"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="18"
          x2="6"
          y1="6"
          y2="18"
        />
        <line
          x1="6"
          x2="18"
          y1="6"
          y2="18"
        />
      </svg>
    </button>
  </span>
</output>
`;
